src/human_study/program_39/python_err_msg.txt
File "./seq2parse/human_study/program_39/original.py", line 1
    def etudiant(name.id,university):
                     ^
SyntaxError: invalid syntax
